Fixed bug in header component where the page didn't scroll to the top when navigating to a new page. Adjusted background color of the the home, library and adventure pages. Added a placeholder image for the profile picture in the about component.

--- a/chuok-frontend/src/app/components/header-main/header-main.component.html
+++ b/chuok-frontend/src/app/components/header-main/header-main.component.html
@@ -3,14 +3,14 @@
 </header>
   <nav #navBar class="nav-bar" [class.open]="navOpen" (click)="toggleNav()">
   <ng-container *ngIf="navOpen">
-    <a routerLink="/about" class="bounce-hover" (click)="closeNav()">
+    <a routerLink="/about" class="bounce-hover" (click)="closeNav()" title="About">
       <img class="logo-picture" src="assets/images/pages/about.png" alt="About">
     </a>
-    <a routerLink="/contact" class="bounce-hover" (click)="closeNav()">
+    <a routerLink="/contact" class="bounce-hover" (click)="closeNav()" title="Contact">
       <img class="logo-picture" src="assets/images/pages/contact.png" alt="Contact">
     </a>
-    <a routerLink="/login" class="bounce-hover" (click)="closeNav()">
-      <img class="logo-picture" src="assets/images/pages/profile.png" alt="Profile">
+    <a routerLink="/login" class="bounce-hover" (click)="closeNav()" title="Login">
+      <img class="logo-picture" src="assets/images/pages/login.png" alt="Profile">
     </a>
   </ng-container>
 </nav>
