--- a/chuok-frontend/src/app/pages/home/home.component.html
+++ b/chuok-frontend/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
     <div class="sections">
         <a href="/library" class="articles-phrases" style="text-decoration: none; color: inherit;">
             <div>
-            <p class="section-title">Phrases & Articles</p>
+            <p class="section-title">Library</p>
             <p>Enjoy a break reading through lots of active entertainment.</p>
             </div>
         </a>
