--- a/chuok-frontend/src/app/pages/main/main.component.css
+++ b/chuok-frontend/src/app/pages/main/main.component.css
@@ -168,7 +168,7 @@
 .review-section {
     display: flex;
     flex-direction: column;
-    margin: 50px 0;
+    margin: 80px 0;
     text-align: justify;
 }
 
@@ -201,7 +201,22 @@
     margin-bottom: 10px;
 }
 
-.review-section-button {
+.signup-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    margin: 50px auto;
+}
+
+.signup-section .signup-section-title {
+    font-size: 4rem;
+    /* margin-bottom: 20px; */
+    text-align: center;
+}
+
+.signup-section-button {
     width: 120px;
     padding: 10px 15px;
     border: 2px solid #2c2c2c;
@@ -216,7 +231,7 @@
     margin: 0 auto;
 }
 
-.review-section-button::after {
+.signup-section-button::after {
   content: "";
   position: absolute;
   top: 0;
@@ -232,15 +247,14 @@
   transition: transform 0.5s ease;
 }
 
-.review-section-button:hover::after {
+.signup-section-button:hover::after {
   transform: scale(4);
 }
 
-.review-section-button:hover {
+.signup-section-button:hover {
   border-color: #666666;
   background: #292929;
-}
-
+} 
 
 @media (max-width: 768px) {
     .main-message {
@@ -314,5 +328,13 @@
     .main-content .main-content-panel-3 {
         opacity: 1;
         transition: none;
+    }
+
+    .signup-section {
+        text-align: center;
+    }
+
+    .signup-section .signup-section-title {
+    font-size: 2rem;
     }
 }
