- Established a basic authentication system with JWT - Implemented login and signup functionality - Added JWT token generation and validation - Established connection between frontend and backend for authentication - Added protected routes in the frontend - Added logout functionality

--- a/chuok-frontend/src/app/components/header/header.component.html
+++ b/chuok-frontend/src/app/components/header/header.component.html
@@ -16,6 +16,9 @@
         </a>
         <a routerLink="/user-center" title="User Center" class="bounce-hover" (click)="closeNav()">
             <img class="logo-picture" src="assets/images/pages/user-center.png" alt="Home Logo">
-        </a>  
+        </a>
+        <a title="Log Out" class="bounce-hover" (click)="logout()">
+            <img class="logo-picture" src="assets/images/logout.png" alt="Log Out Logo">
+        </a>
     </ng-container>
 </nav>
