--- a/chuok-frontend/src/app/pages/login/login.component.html
+++ b/chuok-frontend/src/app/pages/login/login.component.html
@@ -1,5 +1,40 @@
 <main class="main">
   <section class="form-section">
+    <form class="form" (ngSubmit)="onSubmit()">
+      <h1>LOG IN</h1>
+
+      <label>
+        <input required type="email" class="input" [(ngModel)]="email" name="email" />
+        <span>email</span>
+      </label>
+
+      <label>
+        <input required type="password" class="input" [(ngModel)]="password" name="password" />
+        <span>password</span>
+      </label>
+
+      <button class="fancy" type="submit">
+        <span class="top-key"></span>
+        <span class="text">log in</span>
+        <span class="bottom-key-1"></span>
+        <span class="bottom-key-2"></span>
+      </button>
+
+      <div *ngIf="errorMsg" class="error-message">{{ errorMsg }}</div>
+      <div class="flex-message">
+        <p>Welcome back! Please log in to your account.</p>
+        <p>Don't have an account? <a href="/signup"><span class="signup-text">Sign up</span></a></p>
+      </div>
+    </form>
+  </section>
+  <section class="about-section">
+    <a href="/main"><img class="main-logo-picture" src="assets/images/chuOK-logo-no-border-white.png" alt="Home Logo"></a>
+  </section>
+</main>
+
+
+<!-- <main class="main">
+  <section class="form-section">
     
       <form class="form" (ngSubmit)="$event.preventDefault()">
         <h1>LOG IN</h1>
@@ -27,3 +62,4 @@
     <a href="/main"><img class="main-logo-picture" src="assets/images/chuOK-logo-no-border-white.png" alt="Home Logo"></a>
   </section>
 </main>
+ -->
