--- a/chuok-frontend/src/styles.css
+++ b/chuok-frontend/src/styles.css
@@ -4,16 +4,10 @@
     box-sizing: border-box;
 }
 
-.lexend-deca-regular {
-    font-family: "Lexend Deca", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
 body {
     background-color: #f5f5f5;
     color: #292929;
+    font-family: 'Trebuchet MS', sans-serif
 }
 
 button {
