--- a/chuok-frontend/src/app/pages/home/home.component.html
+++ b/chuok-frontend/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
     <div>
         <p class="greetings">
-            Hi,&nbsp;<span class="user-name">Neothefst</span>
+            Welcome back!
         </p>
     </div>
     <div class="catchphrase">
