- Added new logic to handle completed levels in the backend. - Introduced new DTO for completed levels. - Updated frontend to display public articles, games, and guides.

--- a/chuok-frontend/src/app/components/footer/footer.component.html
+++ b/chuok-frontend/src/app/components/footer/footer.component.html
@@ -109,19 +109,19 @@
   <div class="footer-links">
     <div class="footer-articles">
       <p>Interesting articles</p>
-      <a routerLink="/#" routerLinkActive="active">Article 1</a>
-      <a routerLink="/#" routerLinkActive="active">Article 2</a>
-      <a routerLink="/#" routerLinkActive="active">Article 3</a>
-      <a routerLink="/#" routerLinkActive="active">Article 4</a>
-      <a routerLink="/#" routerLinkActive="active">Article 5</a>
+      <a routerLink="/public-articles/1" routerLinkActive="active">Article 1</a>
+      <a routerLink="/public-articles/2" routerLinkActive="active">Article 2</a>
+      <a routerLink="/public-articles/3" routerLinkActive="active">Article 3</a>
+      <a routerLink="/public-articles/4" routerLinkActive="active">Article 4</a>
+      <a routerLink="/public-articles/5" routerLinkActive="active">Article 5</a>
     </div>
     <div class="footer-games">
       <p>Interesting games</p>
-      <a routerLink="/#" routerLinkActive="active">Game 1</a>
-      <a routerLink="/#" routerLinkActive="active">Game 2</a>
-      <a routerLink="/#" routerLinkActive="active">Game 3</a>
-      <a routerLink="/#" routerLinkActive="active">Game 4</a>
-      <a routerLink="/#" routerLinkActive="active">Game 5</a>
+      <a routerLink="/public-games/1" routerLinkActive="active">Game 1</a>
+      <a routerLink="/public-games/2" routerLinkActive="active">Game 2</a>
+      <a routerLink="/public-games/3" routerLinkActive="active">Game 3</a>
+      <a routerLink="/public-games/4" routerLinkActive="active">Game 4</a>
+      <a routerLink="/public-games/5" routerLinkActive="active">Game 5</a>
     </div>
     <div class="footer-guide">
       <p>Guide to chuOK</p>
