--- a/chuok-frontend/src/app/pages/phrases/phrases.component.html
+++ b/chuok-frontend/src/app/pages/phrases/phrases.component.html
@@ -1,16 +1,7 @@
-<nav class="filter">
-    <ul class="filter-list">
-        <li><button>All</button></li>
-        <li><button>Literature</button></li>
-        <li><button>Science</button></li>
-        <li><button>Nature</button></li>
-    </ul>
-</nav>
 <main class="phrases-grid">
     <div class="phrase-card" *ngFor="let phrase of phrases; let i = index" (click)="openPhrase(i)">
-        <h2>{{ phrase.title }}</h2>
+        <h4>{{ phrase.title }}</h4>
         <p></p>
-        <p>{{ phrase.author }}</p>
         <p>{{ phrase.date }}</p>
     </div>
 </main>
@@ -22,9 +13,7 @@
     <ng-container *ngIf="selectedPhraseIndex !== null">
       <h2>{{ phrases[selectedPhraseIndex!].title }}</h2>
       <p>{{ phrases[selectedPhraseIndex!].content }}</p>
-      <p>{{ phrases[selectedPhraseIndex!].author }}</p>
-      <p>{{ phrases[selectedPhraseIndex!].date }}</p>
+      <p>{{ phrases[selectedPhraseIndex!].date | date }}</p>
     </ng-container>
-    
   </div>
 </div>
