--- a/chuok-frontend/src/styles.css
+++ b/chuok-frontend/src/styles.css
@@ -10,6 +10,14 @@ body {
     font-family: 'Trebuchet MS', sans-serif
 }
 
+
+.lexend-deca {
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
 button {
     cursor: pointer;
     font-family: "Lexend Deca", sans-serif;
