- Added public guides section with detailed guides and images - Updated footer and home page to include links to guides - Updated routing module to include new public guides page - Added new HTML files for guides and images - Updated chuOK documentation PDF

--- a/chuok-frontend/src/app/components/footer/footer.component.html
+++ b/chuok-frontend/src/app/components/footer/footer.component.html
@@ -125,11 +125,11 @@
     </div>
     <div class="footer-guide">
       <p>Guide to chuOK</p>
-      <a routerLink="/#" routerLinkActive="active">Guide 1</a>
-      <a routerLink="/#" routerLinkActive="active">Guide 2</a>
-      <a routerLink="/#" routerLinkActive="active">Guide 3</a>
-      <a routerLink="/#" routerLinkActive="active">Guide 4</a>
-      <a routerLink="/#" routerLinkActive="active">Guide 5</a>
+      <a routerLink="/public-guides/1" routerLinkActive="active">Guide 1</a>
+      <a routerLink="/public-guides/2" routerLinkActive="active">Guide 2</a>
+      <a routerLink="/public-guides/3" routerLinkActive="active">Guide 3</a>
+      <a routerLink="/public-guides/4" routerLinkActive="active">Guide 4</a>
+      <a routerLink="/public-guides/5" routerLinkActive="active">Guide 5</a>
     </div>
     <div class="footer-know-contact">
       <p>Know about us</p>
