--- a/chuok-frontend/src/app/pages/home/home.component.html
+++ b/chuok-frontend/src/app/pages/home/home.component.html
@@ -24,8 +24,8 @@
         </a>
     </div>
 </main>
-<section>
+<!-- <section>
     <div class="data">
         <p>Your stats: </p>
     </div>
-</section>
+</section> -->
